常用JVM配置参数v1.2
永久区分配参数、栈大小分配